<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:orientation="vertical"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_marginLeft="15dip"
				android:layout_marginRight="15dip">

	<TextView
	android:id="@+id/tvTitlePassword"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_alignParentRight="false"
	android:layout_alignParentTop="true"
	android:layout_centerHorizontal="true"
	android:gravity="center_vertical"
	android:textAppearance="?android:attr/textAppearanceMedium"
	android:layout_alignParentEnd="false"
	android:textSize="20dp"
	android:textColor="@android:color/black"
	android:layout_marginTop="8dip"
	android:text="@string/titleChangePassword"/>

	<EditText
	style="@style/DefaultEditText"
	android:ems="10"
	android:id="@+id/etOldPassword"
	android:layout_marginTop="10dp"
	android:paddingLeft="12dp"
	android:paddingRight="12dp"
	android:maxLength="15"
	android:inputType="textPassword"
	android:drawableLeft="@drawable/ic_lock_open_black"
	android:layout_below="@id/tvTitlePassword"
	android:hint="@string/hintOldPassword"/>

	<EditText
	style="@style/DefaultEditText"
	android:ems="10"
	android:id="@+id/etNewPassword"
	android:layout_below="@id/etOldPassword"
	android:layout_marginTop="10dip"
	android:paddingLeft="12dp"
	android:paddingRight="12dp"
	android:maxLength="15"
	android:inputType="textPassword"
	android:drawableLeft="@drawable/ic_lock_open_black"
	android:hint="@string/hintNewPassword"/>

	<EditText
	style="@style/DefaultEditText"
	android:ems="10"
	android:id="@+id/etVerificationPassword"
	android:layout_below="@id/etNewPassword"
	android:layout_marginTop="10dip"
	android:paddingLeft="12dp"
	android:paddingRight="12dp"
	android:maxLength="15"
	android:inputType="textPassword"
	android:drawableLeft="@drawable/ic_lock_open_black"
	android:hint="@string/hintVerificationPassword"/>

	<LinearLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/llRTRWKpos"
	android:layout_below="@id/etVerificationPassword"
	android:orientation="horizontal"
	android:weightSum="8"
	android:layout_marginTop="10dip"
	android:layout_marginLeft="40dip"
	android:layout_marginRight="40dip"
	android:layout_marginBottom="15dip">

		<Button
		android:ems="10"
		android:layout_width="match_parent"
		android:layout_height="36dp"
		android:text="@string/strButtonChange"
		android:id="@+id/btnChangePassword"
		android:layout_centerHorizontal="true"
		android:background="@drawable/rectroundorange"
		android:layout_marginRight="7dip"
		android:layout_marginTop="12dip"
		android:layout_marginBottom="8dip"
		android:textSize="16dp"
		android:layout_weight="4"
		android:textColor="@android:color/white"/>

		<Button
		android:ems="10"
		android:layout_width="match_parent"
		android:layout_height="36dp"
		android:text="@string/strButtonCancel"
		android:id="@+id/btnCancelPassword"
		android:layout_centerHorizontal="true"
		android:background="@drawable/rectroundorange"
		android:layout_marginLeft="7dip"
		android:layout_marginTop="12dip"
		android:layout_marginBottom="8dip"
		android:textSize="16dp"
		android:layout_weight="4"
		android:textColor="@android:color/white"/>
	</LinearLayout>

</RelativeLayout>