<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
							android:orientation="vertical"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:layout_marginLeft="15dip"
							android:layout_marginRight="15dip">

	<TextView
			android:id="@+id/tvTitleReason"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignParentRight="false"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			android:gravity="center_vertical"
			android:textAppearance="?android:attr/textAppearanceMedium"
			android:layout_alignParentEnd="false"
			android:textSize="20dp"
			android:textColor="@android:color/black"
			android:layout_marginTop="8dip"
			android:text="@string/titleReason"/>

	<EditText
			android:layout_width="match_parent"
			android:layout_height="48dip"
			android:ems="10"
			android:id="@+id/etReason"
			android:background="@drawable/rectroundgray"
			android:layout_marginTop="10dp"
			android:paddingLeft="12dp"
			android:paddingRight="12dp"
			android:maxLines="1"
			android:inputType="text"
			android:drawableLeft="@drawable/ic_assignment_black"
			android:drawablePadding="5dp"
			android:layout_below="@id/tvTitleReason"
			android:hint="@string/hintReason"/>

	<Button
		style="@style/DefaultButton"
		android:ems="10"
		android:text="@string/strBtnOK"
		android:id="@+id/btnSubmitReason"
		android:layout_marginLeft="50dip"
		android:layout_marginRight="50dip"
		android:layout_marginTop="12dip"
		android:layout_marginBottom="8dip"
		android:layout_centerHorizontal="true"
		android:layout_below="@id/etReason"
		android:textColor="@android:color/white"/>
</RelativeLayout>