<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/sinkrondata_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.fz.fzapp.common.SyncData"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
       style="@style/DefaultUtils3"
       android:text="@string/titleRecap1"
       android:id="@+id/textView"
       android:layout_alignParentTop="true"
       android:layout_alignParentLeft="true"
       android:layout_alignParentStart="true"/>

    <TextView
       style="@style/DefaultHead1"
       android:text="@string/titleRecap2"
       android:layout_alignParentTop="true"
       android:layout_toRightOf="@+id/textView"
       android:layout_toEndOf="@+id/textView"
       android:id="@+id/textView2"
       android:layout_marginLeft="5dp"/>

    <Button
       style="@style/DefaultSplitter"
       android:layout_below="@+id/textView"
       android:id="@+id/splitter"
       android:layout_marginTop="10dp"
       android:layout_alignLeft="@+id/textView"
       android:layout_alignStart="@+id/textView"/>

    <RelativeLayout
      android:layout_marginTop="12dp"
      android:layout_below="@+id/splitter"
      android:layout_width="match_parent"
      android:layout_height="153dp">

        <TextView
          style="@style/DefaultUtils3"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ems="10"
          android:text="@string/strDueTime"
          android:layout_marginBottom="5dp"
          android:id="@+id/tvCurrent"
          android:layout_toStartOf="@+id/relativeLayout" android:gravity="right"/>

        <RelativeLayout
          android:layout_width="137dp"
          android:layout_height="match_parent"
          android:layout_centerHorizontal="true"
          android:layout_gravity="center" android:id="@+id/relativeLayout">

            <ImageView
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              app:srcCompat="@drawable/progressgreen"
              android:id="@+id/ivGo"
              android:scaleType="fitXY"/>

            <TextView
              style="@style/DefaultHead1"
              android:text="00:00"
              android:textSize="38sp"
              android:layout_width="match_parent"
              android:id="@+id/tvCountTime"
              android:layout_height="match_parent"
              android:gravity="center"/>

        </RelativeLayout>

        <TextView
          style="@style/DefaultHead1"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:ems="10"
          android:text="@string/strMinute"
          android:id="@+id/tvDue"
          android:layout_alignParentBottom="true" android:layout_alignLeft="@+id/relativeLayout"
          android:layout_alignStart="@+id/relativeLayout" android:layout_marginLeft="113dp"
          android:layout_marginStart="113dp" android:gravity="left"/>
    </RelativeLayout>


    <Button
      style="@style/DefaultButton"
      android:ems="10"
      android:text="@string/strNextRecap"
      android:id="@+id/btnRecapDone"
      android:layout_centerHorizontal="true"
      android:layout_marginRight="7dip"
      android:layout_alignParentBottom="true"
      android:layout_weight="3"
      android:layout_marginBottom="12dp"/>
</RelativeLayout>
