<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
   android:id="@+id/sinkrondata_layout"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context="com.fz.fzapp.common.SyncData"
   android:paddingLeft="@dimen/activity_horizontal_margin"
   android:paddingRight="@dimen/activity_horizontal_margin"
   android:paddingTop="@dimen/activity_vertical_margin"
   android:paddingBottom="@dimen/activity_vertical_margin">
    <RelativeLayout
       android:id="@+id/header"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
        <TextView
           style="@style/DefaultUtils3"
           android:text="@string/titleSyncData1"
           android:id="@+id/textView"
           android:layout_alignParentTop="true"
           android:layout_alignParentLeft="true"
           android:layout_alignParentStart="true"/>

        <TextView
           style="@style/DefaultHead1"
           android:text="@string/titleSyncData2"
           android:layout_alignParentTop="true"
           android:layout_toRightOf="@+id/textView"
           android:layout_toEndOf="@+id/textView"
           android:id="@+id/textView2"
           android:layout_marginLeft="5dp"/>

        <Button
           style="@style/DefaultSplitter"
           android:layout_below="@+id/textView"
           android:id="@+id/splitter"
           android:layout_marginTop="8dp"
           android:layout_alignLeft="@+id/textView"
           android:layout_alignStart="@+id/textView"/>

        <ImageView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:background="@drawable/ic_other_menu"
           android:layout_alignParentTop="true"
           android:layout_alignRight="@+id/splitter"
           android:layout_alignEnd="@+id/splitter"
           android:id="@+id/ivOtherMenu"/>

    </RelativeLayout>
    <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_below="@+id/header"
       android:orientation="vertical">
        <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:weightSum="2"
            android:paddingTop="-1dp"
           android:orientation="horizontal"
           android:background="@drawable/border_black">
            <LinearLayout
               android:layout_width="0dp"
               android:layout_height="@dimen/padding_20"
               android:layout_weight="1"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp"

               android:orientation="horizontal">
                <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   app:srcCompat="@drawable/ic_account"/>
                <TextView
                   android:id="@+id/tvUserNameSync"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/titleKe"
                   android:gravity="center"
                   android:textSize="@dimen/padding_14"

                />
            </LinearLayout>
            <View
               android:layout_width="0.5dp"
               android:layout_height="match_parent"></View>
            <LinearLayout
               android:layout_width="0dp"
               android:layout_height="@dimen/padding_20"
               android:layout_weight="1"
               android:layout_marginTop="5dp"
               android:layout_marginBottom="5dp">
                <ImageView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:src="@drawable/truck_24"/>
                <TextView
                   android:id="@+id/tvTruckSync"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:text="@string/titleKe"
                   android:gravity="center"
                   android:textSize="@dimen/padding_14"
                />
            </LinearLayout>
        </LinearLayout>
        <TextView
           style="@style/DefaultHead1"
           android:text="@string/titleKlik"
           android:layout_marginTop="@dimen/padding_60"
           android:id="@+id/tvMsg"
           android:layout_gravity="center"
           android:layout_centerHorizontal="true"/>

        <ImageView
           android:layout_width="@dimen/diameter_circle"
           android:layout_height="@dimen/diameter_circle"
           app:srcCompat="@drawable/buttonthick"
           android:id="@+id/ivGo"
           android:layout_centerHorizontal="true"
           android:layout_gravity="center"
           android:scaleType="fitXY"
           android:layout_below="@+id/splitter"
           android:layout_margin="@dimen/padding_20"/>

        <TextView
           android:paddingTop="@dimen/padding_14"
           style="@style/DefaultHead1"
           android:text="@string/notifikasiText"
           android:id="@+id/tvNotifeSync"
           android:layout_gravity="center"
           android:layout_centerHorizontal="true"
           android:visibility="invisible"/>

        <Button
           style="@style/DefaultButton"
           android:text="@string/strBtnCancel"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_alignParentBottom="true"
           android:layout_centerHorizontal="true"
           android:layout_marginTop="@dimen/padding_60"
           android:layout_gravity="center"
           android:id="@+id/btnCancelGo"
           android:visibility="visible"/>
    </LinearLayout>

</RelativeLayout>
